Fixing more CSS alignment issues

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -45,6 +45,7 @@ div.images-block {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(calc(250px + var(--size-offset)), 1fr));
     min-height:100vh;
+    align-content: baseline;
 }
 
 div.thumbnail {
@@ -87,6 +88,7 @@ div.thumbnail {
 }
 
 .modal-dialog {
+    display: flex;
     max-width: 100%;
     justify-content: center;
     background-color: transparent;
@@ -95,7 +97,6 @@ div.thumbnail {
 
 .fullsizeModal .modal-content {
     max-width: min-content;
-    justify-self: center;
 }
 
 .fullsizeModal .image-modal-info {
